--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Laravel|Git</title>
 </head>
 <body>
-    <h1 style="color:brown">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore odit labore nam exercitationem, commodi adipisci iure, mollitia ducimus facilis vitae recusandae cumque molestias rerum quasi cum minima fugit amet esse!</h1>
+    <h1> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore odit labore nam exercitationem, commodi adipisci iure, mollitia ducimus facilis vitae recusandae cumque molestias rerum quasi cum minima fugit amet esse!</h1>
 </body>
 </html>
