--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laravel|Git</title>
 </head>
-<body>
+<body style="background-color:rgb(219, 55, 55)">
     <h1 style="color:brown">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore odit labore nam exercitationem, commodi adipisci iure, mollitia ducimus facilis vitae recusandae cumque molestias rerum quasi cum minima fugit amet esse!</h1>
 </body>
 </html>
