--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Laravel|Git</title>
 </head>
 <body style="background-color:rgb(219, 55, 55)">
-    <h1 style="color:fff">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore odit labore nam exercitationem, commodi adipisci iure, mollitia ducimus facilis vitae recusandae cumque molestias rerum quasi cum minima fugit amet esse!</h1>
+    <h1 style="color:#fff">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore odit labore nam exercitationem, commodi adipisci iure, mollitia ducimus facilis vitae recusandae cumque molestias rerum quasi cum minima fugit amet esse!</h1>
 </body>
 </html>
